# ticket

./: .gitignore  models.ts  routes  run  test.js
Data/: customer.json  device.json  note.json  store.json  user.json  workorder.json
docs/: get  post  put  responses
front-end/: package-lock.json  package.json
front-end-2.0/public/: index.html
front-end-2.0/src/: App.svelte  stores.js
front-end-3.0/: package-lock.json  package.json  rollup.config.js
front-end-3.0/public/: index.html
front-end-3.0/server/: main.js
front-end-3.0/src/: App.svelte  main.js  sampleData.js  stores.js  utils.js
front-end/public/: index.html
front-end/src/: App.svelte  stores.js
item-wasm/: Cargo.toml  LICENSE_MIT
server/: .env  Cargo.toml  routes  static
server/migrations/2020-11-19-081928_users/: up.sql
server/migrations/2020-11-19-081931_stores/: down.sql  up.sql
server/migrations/2020-11-19-081932_customers/: up.sql
server/migrations/2020-11-19-081934_devices/: up.sql
server/migrations/2020-11-19-081937_workorders/: down.sql  up.sql
server/migrations/2020-11-19-081938_notes/: up.sql
server/schema_macros/: Cargo.toml
server/schema_macros/src/: lib.rs
server/schema_proc_macros/: Cargo.toml
server/schema_proc_macros/src/: lib.rs
server/src/: db.rs  macros.rs  main.rs  models.rs
server/src/db/: down.sql  insert_test_data.sql  mod.rs  models.rs  schema.rs  up.sql
server/src/db/schema/: customers.rs  devices.rs  mod.rs  notes.rs  stores.rs  users.rs  workorders.rs
server/src/db/types/: find.rs  insert.rs  mod.rs  models.rs  options.rs  responses.rs  update.rs
server/src/handlers/: error.rs  mod.rs
server/src/routes/: customers.rs  devices.rs  front_end.rs  mod.rs  notes.rs  static.rs  stores.rs  users.rs  workorders.rs
server/src/routes/api/: customers.rs  devices.rs  mod.rs  notes.rs  stores.rs  users.rs  workorders.rs
server/src/routes/auth/: login.rs  mod.rs
server/static/handlers/: 401.html  404.html  500.html
server/static/public/: index.html
(+51 files in other folders)
