[package]
name = "server"
version = "0.1.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = '3.0.2'
chrono = { version = '0.4.15', features = ['serde']} 
mongodb = "1.1.1"
serde = { version = '1.0', features = ['derive'] }
semval = '0.1.6'
futures = '0.3.5'