[package]
name = "server"
version = "0.1.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = '3.0.2', features = ['openssl'] }
actix-service = "1.0.6"
chrono = { version = '0.4.15', features = ['serde'] } 
serde = { version = '1.0', features = ['derive'] }
semval = '0.1.6'
futures = '0.3.5'
mysql = "20.0.0"
schema_proc_macros = { version = '*', path = './schema_proc_macros'}
oauth2 = { version = "3.0" }
actix-cors = "0.5.0"
actix-files = "0.4.0"
env_logger = "0.7.1"
openssl = "0.10.30"
webforms = "0.2.2"
lazy_static = "1.4.0"
regex = "1.4.1"
serde_qs = "0.7.0"
derive_more = "0.99.11"
rand = "0.7.3"
actix-identity = "0.3"